# email-DjangoRest

./: .gitignore  README.md  pyproject.toml
EnvioEmail/: views.py
config/: settings.py
